JumpScript/tests/baselines/reference/parser0_004152.errors.txt
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,28): error TS2304: Cannot find name 'DisplayPosition'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,45): error TS1137: Expression or comma expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,46): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,49): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,51): error TS2300: Duplicate identifier '3'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,52): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,54): error TS2300: Duplicate identifier '3'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,55): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,57): error TS2300: Duplicate identifier '3'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,58): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,60): error TS2300: Duplicate identifier '3'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,61): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,64): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,66): error TS2300: Duplicate identifier '3'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,67): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,69): error TS2300: Duplicate identifier '3'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,70): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,72): error TS2300: Duplicate identifier '3'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,73): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,75): error TS2300: Duplicate identifier '3'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,76): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,78): error TS2300: Duplicate identifier '3'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,79): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,81): error TS2300: Duplicate identifier '3'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,82): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,84): error TS2300: Duplicate identifier '0'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,85): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,86): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,94): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,96): error TS2300: Duplicate identifier '0'.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(2,97): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump(3,25): error TS2304: Cannot find name 'SeedCoords'.


==== tests/cases/conformance/parser/ecmascript5/Fuzz/parser0_004152.jump (32 errors) ====
    export class Game {
        private position = new DisplayPosition([), 3, 3, 3, 3, 3, 0, 3, 3, 3, 3, 3, 3, 0], NoMove, 0);
                               ~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'DisplayPosition'.
                                                ~
!!! error TS1137: Expression or comma expected.
                                                 ~
!!! error TS1005: ';' expected.
                                                    ~
!!! error TS1005: ';' expected.
                                                      ~
!!! error TS2300: Duplicate identifier '3'.
                                                       ~
!!! error TS1005: ';' expected.
                                                         ~
!!! error TS2300: Duplicate identifier '3'.
                                                          ~
!!! error TS1005: ';' expected.
                                                            ~
!!! error TS2300: Duplicate identifier '3'.
                                                             ~
!!! error TS1005: ';' expected.
                                                               ~
!!! error TS2300: Duplicate identifier '3'.
                                                                ~
!!! error TS1005: ';' expected.
                                                                   ~
!!! error TS1005: ';' expected.
                                                                     ~
!!! error TS2300: Duplicate identifier '3'.
                                                                      ~
!!! error TS1005: ';' expected.
                                                                        ~
!!! error TS2300: Duplicate identifier '3'.
                                                                         ~
!!! error TS1005: ';' expected.
                                                                           ~
!!! error TS2300: Duplicate identifier '3'.
                                                                            ~
!!! error TS1005: ';' expected.
                                                                              ~
!!! error TS2300: Duplicate identifier '3'.
                                                                               ~
!!! error TS1005: ';' expected.
                                                                                 ~
!!! error TS2300: Duplicate identifier '3'.
                                                                                  ~
!!! error TS1005: ';' expected.
                                                                                    ~
!!! error TS2300: Duplicate identifier '3'.
                                                                                     ~
!!! error TS1005: ';' expected.
                                                                                       ~
!!! error TS2300: Duplicate identifier '0'.
                                                                                        ~
!!! error TS1005: ';' expected.
                                                                                         ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
                                                                                                 ~
!!! error TS1005: ';' expected.
                                                                                                   ~
!!! error TS2300: Duplicate identifier '0'.
                                                                                                    ~
!!! error TS1005: ';' expected.
        private prevConfig: SeedCoords[][];
                            ~~~~~~~~~~
!!! error TS2304: Cannot find name 'SeedCoords'.
    }